# bluenc

./: Cargo.toml  README.md
examples/: camera.nc  deletenode.nc  egui.nc  image2d.nc  keyinput.nc  newgame.nc  node_textures.nc  positions.nc  projectiles.nc  rotations.nc  scale.nc  sprites_animations.nc  sprites_animations2.nc  textnode.nc
models/: grass.3dbnc  grass1.3dbnc  grass_road_horizontal.3dbnc  grass_road_vertical.3dbnc  realgrass.3dbnc  realtree.3dbnc  realtree2.3dbnc  tree.3dbnc
resources/characters/cammy/: config.nc
resources/characters/dude1/: config.nc
resources/characters/dude2/: config.nc
resources/characters/girl1/: config.nc
resources/characters/rocketguy/: config.nc
src/: main.rs
src/includes/: bluenc.rs  bn3models.rs  corefunctions.rs  maps.rs  textnodes.rs
system/: BENC.nc  Engine.nc  animations.nc  devtools.nc  gui.nc  test.nc
system/engine/: animations.nc  camera.nc  colission.nc  controls.nc  core.nc  gui.nc
system/engine/map/: map.nc
system/engine/tools/: mapeditor.nc  modeleditor.nc
